Fix input width on mobile

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -2,10 +2,6 @@
   text-rendering: optimizeLegibility;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   box-sizing: border-box;
   padding: 10px;
@@ -78,7 +74,7 @@ body {
 .message-container {
   display: flex;
   width: max-content;
-  max-width: 100%;
+  max-width: 80%;
   /* background-color: hsl(0, 0%, 75%); */
   background-image: linear-gradient(
     to bottom,
@@ -90,6 +86,7 @@ body {
   border-radius: 10px;
 
   &__input {
+    width: 100%;
     font-size: 14px;
     font-family: Poppins;
     font-weight: 300;
@@ -137,6 +134,7 @@ body {
 }
 
 .footer {
+  box-sizing: border-box;
   text-align: center;
   position: fixed;
   bottom: 0px;
